@@ -13,21 +13,63 @@ java {
     }
 }
 
+sourceSets {
+    integrationTest { // 통합 테스트 환경 정의
+        java {
+            srcDir 'src/integrationTest/java'
+        }
+        resources {
+            srcDir 'src/integrationTest/resources'
+        }
+        compileClasspath += sourceSets.main.output + sourceSets.test.output
+        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
+    }
+}
+
+configurations {
+    integrationTestImplementation.extendsFrom testImplementation
+    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
+}
+
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation(platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2"))
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.1.2'
-
-
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'  // 테스트 관련 라이브러리
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation(platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.3"))
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.3'
+
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
+    testImplementation 'org.mockito:mockito-core:5.4.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' // Spring Boot 테스트 의존성
 }
 
-tasks.named('test') {
-//    useJUnitPlatform()
+tasks.withType(JavaExec).configureEach {
+    jvmArgs = ["-Xms512m", "-Xmx1024m"]
 }
+
+//tasks.withType(JavaCompile).configureEach {
+//    options.compilerArgs << "-parameters"
+//}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading", // 동적 에이전트 로드 허용
+            "-Djdk.instrument.traceUsage=true" // 에이전트 로드 관련 정보 출력
+    ]
+}
+
+tasks.register('integrationTest', Test) {
+    description = "Runs the integration tests."
+    group = "verification"
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    shouldRunAfter test
+}
+
+check.dependsOn integrationTest
